# clipboard-pro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DATABASE.md  GITHUB_RELEASES.md  INSTALLATION.md  MVP_SPEC.md  PERFORMANCE.md  PLATFORMS.md  ROADMAP.md  UX_UI.md
scripts/: download-linux.sh  download-macos.sh  download-windows.ps1  prepare-github-release.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/database/: schema.sql
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: commands.rs
src-tauri/src/database/: sqlite.rs
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: clipboard_monitor.rs  mod.rs
src/components/: ClipboardItemRow.tsx  InlineDialog.tsx  SearchBar.tsx  ViewTabs.tsx  VirtualList.tsx
src/hooks/: useSystemTheme.ts
src/pages/: ClipboardWindow.tsx
src/services/: clipboardService.ts
src/store/: clipboardStore.ts
src/types/: clipboard.ts
src/utils/: itemFormat.ts
tests/: README.md
