[package]
name = "clipboard-pro"
version = "0.1.5"
description = "Clipboard Pro desktop application"
authors = ["Danny Maaz"]
edition = "2021"

[lib]
name = "clipboard_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.6.1"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2"
uuid = { version = "1", features = ["v4"] }
